--- a/UnityDotsAuthoringGenerator.csproj
+++ b/UnityDotsAuthoringGenerator.csproj
@@ -46,6 +46,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Compile Include="Classes\CreateFile.cs" />
     <Compile Include="Classes\DteHelper.cs" />
     <Compile Include="Classes\Templates.cs" />
     <Compile Include="Commands\GenerateAuthoringCommand.cs" />
